--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 python-utils==3.8.1
 pytz==2022.7.1
-pywin32==304
+pywin32>=300; platform_system=="Windows"
 pyzmq==24.0.1
 regex==2023.10.3
 scikit-learn==1.3.2
